build: enable java 23 preview support